Page MenuHome GnuPG

Kleopatra: Migrate application configuration file and state configuration file from old location to new location
Closed, ResolvedPublic

Description

This is a follow-up to T6799: Kleopatra configuration files in wrong places. One person testing the latest beta of Gpg4win 5 reported that some settings were lost (https://bugs.kde.org/show_bug.cgi?id=501447). It turned out that this was due to the new location of the configuration files.

To avoid unnecessary support calls we should migrate at least the most important configuration files, i.e. kleopatrarc and kleopatrastaterc.

Details

Version
Gpg4win-5.0.0-beta145

Event Timeline

ikloecker created this task.
ikloecker moved this task from Backlog to WIP on the gpd5x board.
ikloecker changed the task status from Open to Testing.Mar 25 2025, 9:17 PM

kleopatrarc, kleopatrastaterc, klanguageoverriderc, libkleopatrarc, and kxmlgui5/kleopatra/kleopatra.rc are now copied from the old location used by Gpg4win 4.4/VSD 3.3 (%APPDATA%/kleopatra) to the new location used by Gpg4win 5 (%GNUPGHOME%/kleopatra) if they do not yet exist at the new location. This is also logged.

timegrid added a subscriber: timegrid.

looks good to me on gpg4win-5.0.0-beta190@win10

[5196] org.kde.pim.kleopatra: Copying "C:/Users/g10/AppData/Roaming/kleopatra/kleopatrarc" to "C:/Users/g10/AppData/Roaming/gnupg/kleopatra/kleopatrarc"
[5196] org.kde.pim.kleopatra: Copying "C:/Users/g10/AppData/Roaming/kleopatra/kleopatrastaterc" to "C:/Users/g10/AppData/Roaming/gnupg/kleopatra/kleopatrastaterc"
[5196] org.kde.pim.kleopatra: Copying "C:/Users/g10/AppData/Roaming/kleopatra/klanguageoverridesrc" to "C:/Users/g10/AppData/Roaming/gnupg/kleopatra/klanguageoverridesrc"
[5196] org.kde.pim.kleopatra: Copying "C:/Users/g10/AppData/Roaming/kleopatra/libkleopatrarc" to "C:/Users/g10/AppData/Roaming/gnupg/kleopatra/libkleopatrarc"
[5196] org.kde.pim.kleopatra: Copying "C:/Users/g10/AppData/Roaming/kleopatra/kxmlgui5/kleopatra/kleopatra.rc" to "C:/Users/g10/AppData/Roaming/gnupg/kleopatra/kxmlgui5/kleopatra/kleopatra.rc"
[5196] org.kde.pim.kleopatra: Copying "C:/Users/g10/AppData/Roaming/kleopatra/kleopatragroupsrc" to "C:/Users/g10/AppData/Roaming/gnupg/kleopatra/kleopatragroupsrc"

note: kdeglobals is not copied.