On Windows, migrate more config files to new location

GNUPGHOME/kleopatra/ is only used on Windows as location of the config
files.

GnuPG-bug-id: 7575